--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "devDependencies": {
     "turbo": "^2.0.4-canary.4"
   },
-  "packageManager": "npm@10.5.0",
+  "packageManager": "pnpm@9.4.0+sha256.b6fd0bfda555e7e584ad7e56b30c68b01d5a04f9ee93989f4b93ca8473c49c74",
   "workspaces": [
     "apps/*",
     "packages/*"
