--- a/apps/apps-a/package.json
+++ b/apps/apps-a/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-a",
+  "name": "submodule-app-a",
   "description": "An application that uses other Internal Packages",
   "scripts": {
     "build": "mkdir -p dist && echo \"Your application output!\" > dist/app-output.txt && echo \"Application A is built!\"",
@@ -7,7 +7,7 @@
     "type-check": "echo \"Types checked!\""
   },
   "dependencies": {
-    "pkg-a": "workspace:*",
-    "tooling-config": "workspace:*"
+    "submodule-pkg-a": "workspace:*",
+    "submodule-tooling-config": "workspace:*"
   }
 }
