--- a/apps/apps-b/package.json
+++ b/apps/apps-b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-b",
+  "name": "submodule-app-b",
   "description": "A workspace to use as a model for a final application that the rest of your dependencies are building towards.",
   "scripts": {
     "build": "mkdir -p dist && echo \"Your application output!\" > dist/app-output.txt && echo \"Application B is built!\"",
@@ -7,6 +7,6 @@
     "type-check": "echo \"Types checked!\""
   },
   "dependencies": {
-    "tooling-config": "workspace:*"
+    "submodule-tooling-config": "workspace:*"
   }
 }
