--- a/packages/pkg-a/package.json
+++ b/packages/pkg-a/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "pkg-a",
+  "name": "submodule-pkg-a",
   "scripts": {
     "build": "echo \"Building at the speed of Turbo.\" > output-file.txt && cat output-file.txt",
     "lint": "echo \"Linted!\"",
     "type-check": "echo \"Types checked!\""
   },
   "dependencies": {
-    "tooling-config": "workspace:*"
+    "submodule-tooling-config": "workspace:*"
   }
 }
